--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -18,11 +18,13 @@ body {
 
 .header {
   display: flex;
-  width: 100%;
+  width: rem(1920);
 
   .header-wrapper {
+    position: relative;
     background-image: url('/assets/images/header-bg.png');
     padding: 0 rem(260);
+    width: rem(1920);
 
     .nav {
       display: flex;
@@ -36,7 +38,7 @@ body {
 
         .about {
           font-size: 14px;
-          width: 170px;
+          width: rem(173);
           color: #fff;
           line-height: 21.76px;
           font-weight: 500;
@@ -55,16 +57,36 @@ body {
         display: flex;
         gap: rem(36);
         padding-left: rem(225);
+        z-index: 10;
       }
 
       .phone-number {
         display: flex;
         flex-direction: column;
-        padding-left: 34px;
+        margin-left: 40px;
         gap: rem(13);
+        z-index: 10;
 
-        span {
+        a {
           display: block;
+
+          .number {
+            display: block;
+            color: #fff;
+            font-family: Kudryashev, sans-serif;
+            font-size: 22px;
+            font-weight: 700;
+            line-height: 26.4px;
+            letter-spacing: 0.05em;
+          }
+        }
+
+        .desc {
+          display: block;
+          color: #fff;
+          font-size: 12px;
+          font-weight: 700;
+          line-height: 14.63px;
         }
       }
     }
@@ -108,6 +130,69 @@ body {
         span {
           font-weight: 600;
         }
+      }
+
+      .check-in {
+        position: relative;
+        display: flex;
+        align-items: center;
+        width: rem(345);
+        height: rem(160);
+
+        img {
+          position: absolute;
+        }
+
+        span {
+          mask-image: url('/assets/images/checkin-btn/arrow.svg');
+          width: rem(21);
+          height: rem(10);
+          margin-left: 17%;
+          mask-repeat: no-repeat;
+          mask-size: 100%;
+          background: #fff;
+        }
+
+        button {
+          margin-left: rem(16);
+          color: #fff;
+          background: transparent;
+          border: none;
+          text-transform: uppercase;
+          font-size: 25px;
+          font-weight: 600;
+          line-height: 30.48px;
+          letter-spacing: 0.05em;
+        }
+      }
+    }
+
+    .dots-info {
+      position: absolute;
+      display: block;
+      top: rem(-50);
+      right: rem(300);
+      background-image: url('/assets/images/bg-dots.svg');
+      width: rem(546);
+      height: rem(546);
+
+      .circle-text {
+        position: absolute;
+        bottom: 0;
+        right: 16%;
+        width: rem(223);
+        height: rem(209);
+      }
+
+      .white-dot {
+        position: absolute;
+        bottom: 16%;
+        right: 36%;
+        display: block;
+        width: rem(12);
+        height: rem(12);
+        border-radius: 50%;
+        background-color: #fff;
       }
     }
   }
