--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -14,6 +14,7 @@ a {
 
 body {
   display: flex;
+  flex-direction: column;
   margin: 0 auto;
   max-width: 120rem;
   background-color: #fff;
@@ -175,6 +176,112 @@ body {
   height: 0.75rem;
   border-radius: 50%;
   background-color: #fff;
+}
+
+.clients {
+  display: flex;
+  width: 120rem;
+  background-color: #F0E3DA;
+}
+.clients .clients-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin: 6.875rem 16.125rem;
+  width: 100%;
+  overflow: hidden;
+}
+.clients .clients-wrapper .clients-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.clients .clients-wrapper .clients-header .clients-title {
+  display: flex;
+  flex-direction: column;
+}
+.clients .clients-wrapper .clients-header .clients-title h2 {
+  font-size: 5.3125rem;
+  font-weight: 400;
+  font-family: Kudryashev, sans-serif;
+  color: #B78C6E;
+  margin: 0;
+  padding: 0;
+}
+.clients .clients-wrapper .clients-header .clients-title h3 {
+  font-size: 5.3125rem;
+  font-weight: 400;
+  font-family: Kudryashev, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+.clients .clients-wrapper .clients-header .clients-controls {
+  display: flex;
+  gap: 0.9375rem;
+}
+.clients .clients-wrapper .clients-header .clients-controls button {
+  color: #DBBF8D;
+  font-size: 3.4375rem;
+  background-color: #F9F4F0;
+  width: 6rem;
+  height: 6rem;
+  border: none;
+  transition: 0.1s;
+}
+.clients .clients-wrapper .clients-header .clients-controls button:hover {
+  transform: scale(105%);
+  font-size: 3.75rem;
+}
+.clients .clients-wrapper .clients-header .clients-controls button:active {
+  transform: scale(95%);
+}
+.clients .clients-wrapper .clients-slider {
+  display: flex;
+  margin-top: 4.625rem;
+  justify-content: center;
+  transition: 0.4s;
+}
+.clients .clients-wrapper .clients-slider .client-tile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  max-width: 18.75rem;
+  height: 21.75rem;
+  border-left: 1px solid rgba(128, 128, 128, 0.2);
+  border-right: 1px solid rgba(128, 128, 128, 0.2);
+  padding: 0 1.875rem;
+}
+.clients .clients-wrapper .clients-slider .client-tile .client-name {
+  font-family: Kudryashev, sans-serif;
+  text-align: center;
+  font-size: 1.25rem;
+  letter-spacing: 0.125rem;
+  color: #1D1D1A;
+}
+.clients .clients-wrapper .clients-slider .client-tile .client-photo {
+  width: 7.5rem;
+}
+.clients .clients-wrapper .clients-slider .client-tile .client-desc {
+  text-align: center;
+  line-height: 1.4375rem;
+  font-size: 0.875rem;
+  color: #22211E;
+}
+.clients .clients-wrapper .clients-slider .client-social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.clients .clients-wrapper .clients-slider .client-social ul {
+  display: flex;
+  gap: 2.1875rem;
+  list-style: none;
+  padding: 0;
+}
+.clients .clients-wrapper .clients-slider .client-social ul li {
+  display: flex;
+  align-items: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
