--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -13,7 +13,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  max-width: rem(1920);
+  width: rem(1920);
   background-color: #fff;
 }
 
@@ -197,6 +197,118 @@ body {
       }
     }
   }
+}
+
+.procedure-form {
+  display: flex;
+  width: rem(1920);
+
+  .form-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    background-color: #1D1D1A;
+    padding: rem(165) 0;
+
+    .form-title {
+      display: flex;
+      flex-direction: column;
+      max-width: rem(521);
+
+      h2 {
+        font-weight: 400;
+        font-family: Kudryashev, sans-serif;
+        color: #B68C6E;
+        font-size: rem(50);
+        text-align: center;
+        margin: 0;
+      }
+
+      h3 {
+        color: #FFFFFF;
+        text-align: center;
+        line-height: rem(36);
+        font-weight: 400;
+        font-size: rem(18);
+        margin-top: rem(22);
+      }
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: rem(22);
+      margin-top: rem(22);
+      width: rem(500);
+
+      label {
+        display: flex;
+        width: 100%;
+
+        input {
+          padding: 0 rem(40);
+          width: 100%;
+          height: rem(93);
+          background-color: transparent;
+          border: 2px solid #B68C6E;
+          color: #FFFFFF;
+          font-size: rem(25);
+
+          &::placeholder {
+            transition: .3s;
+          }
+
+          &:hover::placeholder {
+            color: #FFFFFF;
+            padding-left: 5%;
+          }
+        }
+      }
+
+      button {
+        height: rem(93);
+        width: 100%;
+        text-transform: uppercase;
+        background-color: transparent;
+        border: 2px solid #B68C6E;
+        color: #FFFFFF;
+        transition: .2s;
+
+        &:hover {
+          font-weight: 500;
+          font-size: rem(20);
+          color: #B68C6E;
+        }
+
+        &:active {
+          font-weight: 500;
+          font-size: rem(20);
+          color: #B68C6E;
+          transform: scale(95%);
+        }
+      }
+    }
+  }
+
+  .procedure-promo {
+    position: relative;
+    display: flex;
+    background-image: url("/assets/images/procedure-promo.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 50%;
+
+    img {
+      position: absolute;
+      top: rem(70);
+      left: rem(70);
+      width: rem(320);
+      height: rem(150);
+    }
+  }
+
 }
 
 .clients {
