--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -26,7 +26,7 @@ body {
 }
 .header .header-wrapper {
   position: relative;
-  background-image: url("/assets/images/header-bg.png");
+  background-image: url("../images/header-bg.png");
   padding: 0 16.25rem;
   width: 120rem;
 }
@@ -132,7 +132,7 @@ body {
   position: absolute;
 }
 .header .header-wrapper .main .check-in span {
-  mask-image: url("/assets/images/checkin-btn/arrow.svg");
+  mask-image: url("../images/checkin-btn/arrow.svg");
   width: 1.3125rem;
   height: 0.625rem;
   margin-left: 17%;
@@ -156,7 +156,7 @@ body {
   display: block;
   top: -3.125rem;
   right: 18.75rem;
-  background-image: url("/assets/images/bg-dots.svg");
+  background-image: url("../images/bg-dots.svg");
   width: 34.125rem;
   height: 34.125rem;
 }
@@ -262,7 +262,7 @@ body {
 .procedure-form .procedure-promo {
   position: relative;
   display: flex;
-  background-image: url("/assets/images/procedure-promo.png");
+  background-image: url("../images/procedure-promo.png");
   background-repeat: no-repeat;
   background-size: cover;
   width: 50%;
