--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -3,6 +3,7 @@
 
 * {
   font-family: Montserrat, sans-serif;
+  scroll-behavior: smooth;
 }
 
 a {
@@ -432,6 +433,96 @@ body {
           }
         }
       }
+    }
+  }
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  width: rem(1920);
+  background-color: #000000;
+
+  &-wrapper {
+    display: flex;
+    background-color: #D1AE8E;
+    margin: rem(110) rem(260);
+
+    .footer-logo {
+      display: flex;
+      flex-direction: column;
+      padding-top: rem(65);
+      padding-left: rem(70);
+
+      span {
+        width: rem(250);
+        color: #fff;
+        font-size: rem(16);
+      }
+    }
+
+    .footer-menu {
+      display: flex;
+      flex-direction: column;
+      margin-left: rem(90);
+      margin-top: rem(97);
+
+      h3 {
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: rem(16);
+      }
+
+      ul {
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        padding: 0;
+        gap: rem(17);
+
+        li {
+
+          a {
+            color: #fff;
+            font-weight: 500;
+          }
+        }
+      }
+    }
+
+    .footer-contacts {
+      display: flex;
+      flex-direction: column;
+      margin-left: rem(160);
+      margin-top: rem(97);
+
+      h3 {
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: rem(16);
+      }
+    }
+  }
+
+  &-copyrights {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: rem(6);
+    margin-bottom: rem(30);
+
+    span {
+      color: #DCD5CE;
+      font-size: rem(16);
+      text-align: center;
+    }
+
+    .politics {
+      cursor: pointer;
+      text-decoration: underline;
     }
   }
 }
