--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -6,6 +6,7 @@
 }
 * {
   font-family: Montserrat, sans-serif;
+  scroll-behavior: smooth;
 }
 
 a {
@@ -379,6 +380,81 @@ body {
 .clients .clients-wrapper .clients-slider .client-social ul li {
   display: flex;
   align-items: center;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  width: 120rem;
+  background-color: #000000;
+}
+.footer-wrapper {
+  display: flex;
+  background-color: #D1AE8E;
+  margin: 6.875rem 16.25rem;
+}
+.footer-wrapper .footer-logo {
+  display: flex;
+  flex-direction: column;
+  padding-top: 4.0625rem;
+  padding-left: 4.375rem;
+}
+.footer-wrapper .footer-logo span {
+  width: 15.625rem;
+  color: #fff;
+  font-size: 1rem;
+}
+.footer-wrapper .footer-menu {
+  display: flex;
+  flex-direction: column;
+  margin-left: 5.625rem;
+  margin-top: 6.0625rem;
+}
+.footer-wrapper .footer-menu h3 {
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 1rem;
+}
+.footer-wrapper .footer-menu ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding: 0;
+  gap: 1.0625rem;
+}
+.footer-wrapper .footer-menu ul li a {
+  color: #fff;
+  font-weight: 500;
+}
+.footer-wrapper .footer-contacts {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10rem;
+  margin-top: 6.0625rem;
+}
+.footer-wrapper .footer-contacts h3 {
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 1rem;
+}
+.footer-copyrights {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.375rem;
+  margin-bottom: 1.875rem;
+}
+.footer-copyrights span {
+  color: #DCD5CE;
+  font-size: 1rem;
+  text-align: center;
+}
+.footer-copyrights .politics {
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 /*# sourceMappingURL=styles.css.map */
